schema/testdata/errors/set_attribute_ctx_identity_invalid_fields.keel
model UserExtension {
    fields {
        unknown Text
    }

    actions {
        create createExt() {
            //expect-error:42:62:AttributeExpressionError:type 'string' does not support field selection
            @set(userExtension.unknown = ctx.identity.unknown)
        }
        update updateExt(id) {
            //expect-error:42:62:AttributeExpressionError:type 'string' does not support field selection
            @set(userExtension.unknown = ctx.identity.unknown)
        }
    }
}
